Fixed spacing issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -151,6 +151,13 @@ a
 	margin-left: 50px;
 }
 
+//pretty self explanitory
+.columnContainerNoMargin
+{
+	text-align: left;
+	margin: 0px;
+}
+
 //Puts a seperation margin for a bottom button
 .footer
 {
